--- a/go/微服务.md
+++ b/go/微服务.md
@@ -1,6 +1,6 @@
 # 微服务
 
-## RPC 
+## 一、RPC 
 
 > ### 简介
 
@@ -143,11 +143,265 @@ protoc --go_out=. hello.proto
 
 > **Protobuf (Protocol buffers)**是解决这个问题的灵活、高效、自动化的解决方案。使用Protocol buffers，你编写一个描述要存储的数据结构的`.proto`文件。然后，Protocol buffer编译器会创建一个类，该类实现了Protocol buffer数据的自动编码和解析，使用高效的二进制格式。生成的类为构成Protocol buffer的字段提供了获取器和设置器，并处理了读取和写入Protocol buffer的细节。重要的是，Protocol buffer格式支持随着时间的推移扩展格式的想法，以使代码仍然能够读取使用旧格式编码的数据。
 
-### 2.1 基本规范
+
+
+### 2.0 安装
+
+```shell
+# 安装编码器
+# 下载相关包
+go get github.com/golang/protobuf/protoc-gen-go
+```
 
 
 
+### 2.1 版本区别
 
+【区别1】该文件的第一行指定您正在使用proto3语法：如果您不这样做，protocol buffer编译器将假定您使用的是proto2。这必须是文件的第一个非空、非注释行。
+【区别2】proto3取消了proto2的required，而proto3的singular就是proto2的optional。
+【区别3】proto3 repeated标量数值类型默认packed，而proto2默认不开启。
+【区别4】proto3增加了Kotlin，Ruby，Objective-C，C#，Dart的支持
+【区别5】proto2可以选填default，而proto3只能使用系统默认的。（序列化后如果是默认值是不会占用空间的，对于proto2来说处理就很麻烦了）
+【区别6】proto3必须有一个零值，以便我们可以使用 0 作为数字默认值。零值需要是第一个元素，以便与proto2语义兼容，其中第一个枚举值始终是默认值。proto2则没有这项要求。
+【区别7】proto3在3.5版本之前会丢弃未知字段。但在 3.5 版本中，重新引入了未知字段的保留以匹配 proto2 行为。在 3.5 及更高版本中，未知字段在解析过程中保留并包含在序列化输出中。
+【区别8】proto3移除了proto2的扩展，新增了Any（仍在开发中）和JSON映射。
+
+### 2.2 入门案例
+
+编写 proto 代码
+
+```protobuf
+syntax = "proto3";
+
+package hello;
+
+option go_package = "./;hello";
+
+message Say {
+int64 id = 1;
+string hello = 2;
+repeated string word = 3; 
+}
+```
+
+进入到所在目录
+
+```shell
+protoc --go_out=. hello.proto
+```
+
+### 2.3 进阶
+
+```protobuf
+syntax = "proto3";
+
+package hello; // 定义包名用于proto
+
+option go_package = "./;hello"; // 定义go包名，用于生成.pd.go文件
+
+message Say {                  // 定义消息体
+int64 id = 1;
+string hello = 2;
+repeated string word = 3;   // 字符串数组定义
+}
+```
+
+在ProtoBuf消息中定义数组类型，是通过在字段前面增加`repeated`关键词实现，标记当前字段是一个数组。
+
+只要使用repeated标记类型定义，就表示数组类型。
+
+#### 数据类型
+
+rotoBuf支持多种数据类型，例如：string、int32、double、float等等，我整理了一份ProtoBuf和go语言的数据类型映射表
+
+| .proto Type | Go Type | 使用技巧                                                     |
+| ----------- | ------- | ------------------------------------------------------------ |
+| double      | float64 | 没特殊技巧，记住float对应go的float32，double对应go的float64就可以了 |
+| float       | float32 | 没特殊技巧，记住float对应go的float32，double对应go的float64就可以了 |
+| int32       | int32   | 使用变长编码，对于负值的效率很低，如果你的域有可能有负值，请使用sint64替代 |
+| uint32      | uint32  | 使用变长编码                                                 |
+| uint64      | uint64  | 使用变长编码                                                 |
+| sint32      | int32   | 使用变长编码，这些编码在负值时比int32高效的多                |
+| sint64      | int64   | 使用变长编码，有符号的整型值。编码时比通常的int64高效。      |
+| fixed32     | uint32  | 总是4个字节，如果数值都比228大的话，这个类型会比uint32高效。 |
+| fixed64     | uint64  | 总是8个字节，如果数值都比256大的话，这个类型会比uint64高效。 |
+| sfixed32    | int32   | 总是4个字节                                                  |
+| sfixed64    | int64   | 总是8个字节                                                  |
+| bool        | bool    | 严格对应，玩不出其他花样来                                   |
+| string      | string  | 一个字符串必须是UTF-8编码或者7-bit ASCII编码的文本。         |
+| bytes       | []byte  | 可以包含任意顺序的字节数组                                   |
+
+#### 分配标识号
+
+消息体后面跟着的数字就是“分配表示号”；在消息定义中每个字段后面都有一个唯一的数字，这个是标识号。
+
+#### 保留标识号
+
+我们想保留一些标识号，留给以后用
+
+```protobuf
+message Test {
+ reserverd 2,5,7 to 10 //保留2,5,7到10这些标识号
+}
+```
+
+
+
+#### 消息编译
+
+编译命令格式：
+
+```shell
+protoc [OPTION] PROTO_FILES
+
+protoc --go_out=. hello.proto
+```
+
+常用的OPTION选项：
+
+```go
+go复制代码  --go_out=OUT_DIR            指定代码生成目录，生成 Go 代码
+  --cpp_out=OUT_DIR           指定代码生成目录，生成 C++ 代码
+  --csharp_out=OUT_DIR        指定代码生成目录，生成 C# 代码
+  --java_out=OUT_DIR          指定代码生成目录，生成 java 代码
+  --js_out=OUT_DIR            指定代码生成目录，生成 javascript 代码
+  --objc_out=OUT_DIR          指定代码生成目录，生成 Objective C 代码
+  --php_out=OUT_DIR           指定代码生成目录，生成 php 代码
+  --python_out=OUT_DIR        指定代码生成目录，生成 python 代码
+  --ruby_out=OUT_DIR          指定代码生成目录，生成 ruby 代码
+```
+
+
+
+#### 枚举类型
+
+```go
+syntax = "proto3";//指定版本信息，非注释的第一行
+
+enum SexType //枚举消息类型，使用enum关键词定义,一个性别类型的枚举类型
+{
+    UNKONW = 0; //proto3版本中，首成员必须为0，成员不应有相同的值
+    MALE = 1;  //1男
+    FEMALE = 2; //2女  0未知
+}
+
+// 定义一个用户消息
+message UserInfo
+{
+    string name = 1; // 姓名字段
+    SexType sex = 2; // 性别字段，使用SexType枚举类型
+}
+```
+
+#### 消息嵌套
+
+```protobuf
+// 定义Article消息
+message Article {
+  string url = 1;
+  string title = 2;
+  repeated string tags = 3; // 字符串数组类型
+}
+
+// 定义ListArticle消息
+message ListArticle {
+  // 引用上面定义的Article消息类型，作为results字段的类型
+  repeated Article articles = 1; // repeated关键词标记，说明articles字段是一个数组
+}
+---------------------------
+message ListArticle {
+  // 嵌套消息定义
+  message Article {
+    string url = 1;
+    string title = 2;
+    repeated string tags = 3;
+  }
+  // 引用嵌套的消息定义
+  repeated Article articles = 1;
+}
+
+
+```
+
+#### 定义多个proto
+
+将消息定义写在不同的proto文件中，在需要的时候可以通过import导入其他proto文件定义的消息。
+
+#### map 类型
+
+map 字段不能使用`repeated`关键字修饰
+
+```protobuf
+map<key_type, value_type> map_field = N;
+```
+
+
+
+### 2.4 实战
+
+编写user_info.proto
+
+```protobuf
+syntax = "proto3";
+
+package demo;
+
+option go_package = "./;user";
+
+message UserInfo {
+  int64 id = 1;     // id
+  string name = 2;  // 用户名
+  string phone = 3; // 电话号码
+  string email = 4; // 邮箱
+  int32 level = 5;  // 总经验值
+  map<string, int32> score = 6;//学习分数
+}
+```
+
+生成代码：
+
+```shell
+protoc --go_out=. user_info.proto
+```
+
+编写go
+
+```go
+func main() {
+	// 初始化proto中的消息
+	userInfo := &user.UserInfo{}
+
+	// 常规赋值
+	userInfo.Id = 1
+	userInfo.Name = "testMan"
+	userInfo.Email = "ttttt@testEmail.com"
+	userInfo.Phone = "16532489657"
+	userInfo.Level = 0
+
+	// 在go中声明实例化map赋值给ProtoBuf消息中定义的map
+	score := make(map[string]int32)
+	score["demo"] = 100
+	score["test"] = 200
+	userInfo.Score = score
+
+	fmt.Println("userInfo(String):", userInfo.String())
+
+	// 转换成二进制文件
+	ms, err := proto.Marshal(userInfo)
+	if err != nil {
+		return
+	}
+	fmt.Println("userInfo(Binary):", ms)
+
+	// 二进制文件转成结构体
+	newUserInfo := &user.UserInfo{}
+	err = proto.Unmarshal(ms, newUserInfo)
+	if err != nil {
+		return
+	}
+	fmt.Println("userInfo(string by decode):", newUserInfo)
+}
+```
 
 
 
