--- a/数据结构/算法.md
+++ b/数据结构/算法.md
@@ -1170,6 +1170,10 @@ ublic ListNode detectCycle(ListNode head) {
 > 给定两个字符串 `*s*` 和 `*t*` ，编写一个函数来判断 `*t*` 是否是 `*s*` 的字母异位词。
 >
 > **注意：**若 `*s*` 和 `*t*` 中每个字符出现的次数都相同，则称 `*s*` 和 `*t*` 互为字母异位词。
+>
+> 示例 1: 输入: s = "anagram", t = "nagaram" 输出: true
+>
+> 示例 2: 输入: s = "rat", t = "car" 输出: false
 
 * 思路
 
@@ -3417,25 +3421,30 @@ class Solution{
 
 ### 6.13 从中序与后序遍历序列构造二叉树
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+```go
+func buildTree(inorder []int, postorder []int) *TreeNode {
+    var f func(ins , pos , len int) *TreeNode
+    // 取头去尾
+    f = func (ins , pos , len int) *TreeNode{
+        if len == 0 {
+            return nil
+        }
+        tree := &TreeNode{}
+        tree.Val = postorder[pos + len - 1]
+        if len == 1 {
+            return tree
+        }
+        i := 0
+        for i < len && tree.Val != inorder[i + ins] {
+            i++
+        }
+        tree.Left = f(ins, pos, i)
+        tree.Right = f(ins + i + 1, pos + i, len - 1 - i)
+        return tree
+    }
+    return f(0,0,len(inorder))
+}
+```
 
 
 
@@ -5228,6 +5237,74 @@ class Solution {
             dfs(tmp);
         }
         itinerary.add(curr);
+    }
+}
+```
+
+
+
+### 7.13 N皇后
+
+
+
+```java
+class Solution {
+    List<List<String>> resList = new LinkedList<>();
+    List<String> item = new ArrayList<>();
+
+
+    public List<List<String>> solveNQueens(int n) {
+        int[][] array = new int[n][n];
+        solveNQueensHelper(n, 0, array);
+        return resList;
+
+    }
+    public void solveNQueensHelper(int n,int startIndex, int[][] array) {
+        if(item.size() == n) {
+            resList.add(new LinkedList<>(item));
+            return;
+        }
+        for(int i = 0; i < n; i++){
+            if(array[startIndex][i] == 0){
+                StringBuilder sb = new StringBuilder();
+                for(int k = 0; k < n; k++){
+                    if(k == i){
+                        sb.append("Q");
+                    } else{
+                        sb.append(".");
+                    }
+                }
+                item.add(new String(sb));
+                int m = i + 1;
+                int b = i - 1;
+                for(int h = startIndex + 1; h < n; h++){
+                    array[h][i]++;
+                    if (m < n){
+                        array[h][m]++;
+                        m++;
+                    }
+                    if (b > -1) {
+                        array[h][b]++;
+                        b--;
+                    }
+                }
+                solveNQueensHelper(n, startIndex + 1, array);
+                m = i + 1;
+                b = i - 1;
+                for(int h = startIndex + 1; h < n; h++){
+                    array[h][i]--;
+                    if (m < n){
+                        array[h][m]--;
+                        m++;
+                    }
+                    if (b > -1) {
+                        array[h][b]--;
+                        b--;
+                    }
+                }
+                item.remove(item.size() - 1);
+            }
+        }
     }
 }
 ```
