--- a/go/计算机基础.md
+++ b/go/计算机基础.md
@@ -13,3 +13,67 @@
 
 
 ## 用户态与内核态之间切换
+
+用户空间和内核空间
+用户程序有用户态和内核态两种状态。用户态就是执行在用户空间中，不能直接执行系统调用。必须先切换到内核态，也就是系统调用的相关数据信息必须存储在内核空间中，然后执行系统调用。
+
+操作硬盘等资源属于敏感操作，为了内核安全，用户线程不能直接调用。而是采用了操作系统内核提供了系统调用接口，用户线程通过系统调用来实现文件读写。所以直接与硬盘打交道的是操作系统内核。
+
+操作系统将线程分为了内核态和用户态，当用户线程调用了系统调用的时候，需要将线程从用户态切换到内核态。
+
+无论是操作系统内核程序还是用户程序在运行的时候都需要申请内存来保存运行状态，调用方法信息、程序代码、数据等信息。
+
+**操作系统将内存分为内核空间和用户空间。**
+
+内核空间中主要负责 操作系统内核线程以及用户程序系统调用。
+
+用户空间主要负责用户程序的非系统调用。
+
+内核空间比用户空间拥有更高的操作级别，只有在内核空间中才可以调用操作硬件等核心资源。
+
+操作系统将内存按1：3的比例分为了内核空间和用户空间，用户态的运行栈信息保存在用户空间中，内核态的运行栈信息保存在内核空间中。运行栈中保存了当前线程的运行信息，比如执行到了哪些方法，局部变量等。
+
+当发生用户态和内核态之间的切换的时候，运行栈的信息发生了变化，对应的CPU中的寄存器信息也要发生变换。但是用户线程完成系统调用的时候，还是要切换回用户态，继续执行代码的。所以要将发生系统调用之前的用户栈的信息保存起来，也就是将寄存器中的数据保存到线程所属的某块内存区域。**这就涉及到了数据的拷贝，同时用户态切换到内核态还需要安全验证等操作**。所以用户态和内核态之间的切换是十分耗费资源的。
+
+用户态切换到内核态
+
+
+CPU中有一个标志字段，标志着线程的运行状态。用户态和内核态对应着不同的值，用户态为3，内核态为0.
+
+每个线程都对应着一个用户栈和内核栈，分别用来执行用户方法和内核方法。
+用户方法就是普通的操作。
+内核方法就是访问磁盘、内存分配、网卡、声卡等敏感操作。
+
+当用户尝试调用内核方法的时候，就会发生用户态切换到内核态的转变。
+
+![](image\4285b066dca247c8a22f98dd6040bb8e.png)
+
+切换流程：
+1、每个线程都对应这一个TCB，TCB中有一个TSS字段，存储着线程对应的内核栈的地址，也就是内核栈的栈顶指针。
+
+2、因为从用户态切换到内核态时，首先用户态可以直接读写寄存器，用户态操作CPU，将寄存器的状态保存到对应的内存中，然后调用对应的系统函数，传入对应的用户栈的PC地址和寄存器信息，方便后续内核方法调用完毕后，恢复用户方法执行的现场。
+
+3、将CPU的字段改为内核态，将内核段对应的代码地址写入到PC寄存器中，然后开始执行内核方法，相应的方法栈帧时保存在内核栈中。
+
+4、当内核方法执行完毕后，会将CPU的字段改为用户态，然后利用之前写入的信息来恢复用户栈的执行。
+
+从上述流程可以看出用户态切换到内核态的时候，会牵扯到用户态现场信息的保存以及恢复，还要进行一系列的安全检查，比较耗费资源。
+
+![](F:\study\go\image\3cf4a487404c4f98a8b95bf7016b723c.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
