--- a/go/编程细节.md
+++ b/go/编程细节.md
@@ -49,11 +49,11 @@ query db...
 connect
 ```
 
-### **竟然出问题了？**
+**竟然出问题了？**
 
 最终 `disconnect` 并没有输出，最后只有 `connect` ，这是一个 bug，最终的情况是 `connect()` 执行结束后，其执行域得以被保存起来，但内部的闭包并不会被执行。
 
-### **解决方案**
+**解决方案**
 
 ```text
 func() {
@@ -75,7 +75,7 @@ query db...
 disconnect
 ```
 
-### **糟糕的处理方式：**
+**糟糕的处理方式：**
 
 即便这种处理方式很糟，但我还是想告诉你如何不用变量来解决这个问题，因此，我希望你能以此来了解 defer 亦或是 go 语言的运行机制。
 
@@ -94,9 +94,7 @@ func() {
 
 
 
-
-
-### 02 指针的作用
+## 指针的作用
 
 一个指针可以指向任意变量的地址，它所指向的地址在32位或64位机器上分别**固定**占4或8个字节。指针的作用有：
 
@@ -128,3 +126,16 @@ func() {
  
  func (a *A) fun(){}
 ```
+
+
+
+## 内存使用情况函数
+
+```go
+func PrintAlloc() {
+	var m runtime.MemStats
+	runtime.ReadMemStats(&m)
+	fmt.Printf("%d MB\n", m.Alloc/1024)
+}
+```
+
