--- a/go/第三方库.md
+++ b/go/第三方库.md
@@ -18,3 +18,13 @@ For `ants` v2 (with GO111MODULE=on)
 go get -u github.com/panjf2000/ants/v2
 ```
 
+
+
+
+
+# 任务调度
+
+```go
+github.com/robfig/cron/v3@v3.0.0
+```
+
