--- a/go/编程细节.md
+++ b/go/编程细节.md
@@ -13,7 +13,33 @@ slice函数是取头不取尾的
 	sub2 := slice2[:3]  // [0 0 0]
 	sub3 := slice2[1:4] // [0 0 1]
 	// 合并切片
+
+// 插入元素
+// 方法一
+slice := []int{1, 2, 3, 4, 5}
+newElement := 6
+index := 2 // 要插入的位置
+// 创建一个新的 slice，用于存储原始 slice 中 index 位置后的元素
+newSlice := make([]int, len(slice[index:]))
+copy(newSlice, slice[index:])
+// 将新元素插入到原始 slice 中
+slice = append(slice[:index], newElement)
+slice = append(slice, newSlice...)
+
+//方法二
+slice := []int{1, 2, 3, 4, 5}
+newElement := 6
+index := 2 // 要插入的位置
+
+// 在 index 位置插入新元素
+slice = append(slice[:index], append([]int{newElement}, slice[index:]...)...)
 ```
+
+**值传递**
+
+当切片传递值时，是传递指针的，例如a把值传递给b，b发生修改，a也会发生修改。但是会有一种特殊情况，当使用append添加元素时（会发生扩容，容量加1），指针会发生变化，这时两者指向的就不是同一个切片了。
+
+
 
 ## **延迟调用含有闭包的函数**
 
