--- a/小问题/小问题.md
+++ b/小问题/小问题.md
@@ -574,3 +574,46 @@ services.msc
 # 找到VMware NAT Service启动
 ```
 
+
+
+## Http的request请求属性
+
+[`Access-Control-Allow-Origin`](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/Access-Control-Allow-Origin)
+
+指示响应的资源是否可以被给定的来源共享。
+
+[`Access-Control-Allow-Credentials`](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/Access-Control-Allow-Credentials)
+
+指示当请求的凭证标记为 true 时，是否可以公开对该请求响应。
+
+[`Access-Control-Allow-Headers`](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/Access-Control-Allow-Headers)
+
+用在对[预检请求](https://developer.mozilla.org/zh-CN/docs/Glossary/Preflight_request)的响应中，指示实际的请求中可以使用哪些 HTTP 标头。
+
+[`Access-Control-Allow-Methods`](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/Access-Control-Allow-Methods)
+
+指定对预检请求的响应中，哪些 HTTP 方法允许访问请求的资源。
+
+[`Access-Control-Expose-Headers`](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/Access-Control-Expose-Headers)
+
+通过列出标头的名称，指示哪些标头可以作为响应的一部分公开。
+
+[`Access-Control-Max-Age`](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/Access-Control-Max-Age)
+
+指示预检请求的结果能被缓存多久。
+
+[`Access-Control-Request-Headers`](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/Access-Control-Request-Headers)
+
+用于发起一个预检请求，告知服务器正式请求会使用哪些 HTTP 标头。
+
+[`Access-Control-Request-Method`](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/Access-Control-Request-Method)
+
+用于发起一个预检请求，告知服务器正式请求会使用哪一种 [HTTP 请求方法](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Methods)。
+
+[`Origin`](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/Origin)
+
+指示获取资源的请求是从什么源发起的。
+
+[`Timing-Allow-Origin`](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/Timing-Allow-Origin)
+
+指定特定的源，以允许其访问 [Resource Timing API](https://developer.mozilla.org/zh-CN/docs/Web/API/Performance_API/Resource_timing) 功能提供的属性值，否则由于跨源限制，这些值将被报告为零。
