--- a/数据结构/算法.md
+++ b/数据结构/算法.md
@@ -5679,7 +5679,7 @@ class Solution {
 
 ## 排序算法
 
-![](C:\Users\13218\Desktop\study\interview\image\屏幕截图 2024-01-13 124606.png)
+![](images\屏幕截图 2024-01-13 124606.png)
 
 ### 冒泡排序
 
@@ -5734,7 +5734,7 @@ for(int i = 0; i < s.length - 1; i++){
 
 先将待排记录序列分割成为若干子序列分别进行插入排序，待整个序列中的记录"基本有序"时，最后再对全体记录进行一次直接插入排序。
 
-![](C:\Users\13218\Desktop\study\interview\image\屏幕截图 2024-01-13 124142.png)
+![](images\屏幕截图 2024-01-13 124142.png)
 
 ### 归并排序
 
