--- a/go/计算机基础.md
+++ b/go/计算机基础.md
@@ -2,15 +2,37 @@
 
 ## 虚拟地址是什么？
 
-**虚拟内存**：虚拟内存是一种逻辑上扩充物理内存的技术。基本思想是用软、硬件技术把内存与外存这两级存储器当做一级存储器来用。虚拟内存技术的实现利用了自动覆盖和交换技术。简单的说就是将硬盘的一部分作为内存来使用。
+**虚拟内存**：**虚拟内存是一种逻辑上扩充物理内存的技术**。基本思想是用软、硬件技术把内存与外存这两级存储器当做一级存储器来用。虚拟内存技术的实现利用了自动覆盖和交换技术。简单的说就是将硬盘的一部分作为内存来使用。
 
 **虚拟地址空间**：在32位的`i386 CPU`的地址总线的是32位的，也就是说可以寻找到`4G`的地址空间。我们的程序被CPU执行，就是在`0x00000000`到`0xFFFFFFFF`这一段地址中。高`2G`的空间为内核空间，由操作系统调用，低`2G`的空间为用户空间，由用户使用。
 
-​	CPU在寻址的时候，是按照虚拟地址来寻址，然后通过**MMU(内存管理单元)**将虚拟地址转换为物理地址。因为只有程序的一部分加入到内存中，所以会出现所寻找的地址不在内存中的情况（CPU产生缺页异常），如果在内存不足的情况下，就会通过页面调度算法来将内存中的页面置换出来，然后将在外存中的页面加入到内存中，使程序继续正常运行。
+​	CPU在寻址的时候，是按照虚拟地址来寻址，然后通过**MMU(内存管理单元)**将虚拟地址转换为物理地址。因为只有程序的一部分加入到内存中，所以会出现所寻找的地址不在内存中的情况（CPU产生缺页异常），如果在内存不足的情况下，就会通过**页面调度算法**来将内存中的页面置换出来，然后将在外存中的页面加入到内存中，使程序继续正常运行。
 
+物理地址空间是物理内存的范围，虚拟地址空间是虚拟内存的范围，物理地址空间中的每个物理地址都是实打实地指向了具体的存储单元，虚拟地址空间中每个虚拟地址指向哪里有3种情况:
 
+a.未分配,这个虚拟地址仅仅是个数字而已，没有任何指向。
 
+b.未缓冲,这个虚拟地址指向了磁盘的某个字节存储单元，里面存储了指令或者数据。
 
+c.已缓冲,这个虚拟地址指向了物理内存的某个字节存储单元，里面存储了指令或者数据。
+
+**虚拟页，物理页，页表**
+
+现代操作操作和CPU将物理内存按照固定的页大小分成很多份,每一份叫做物理页(PP)，每一份有一个编号叫做物理页号(PPN),这个物理页大小通常是4KB,例如一个物理内存大小为20KB，这个物理内存可以分成5个物理页，那么物理页号(PPN)就是0,1,2,3,4。
+
+虚拟内存也一样，它的页大小与物理内存的页大小相同，虚拟内存也被分成了很多份,每一份叫做虚拟页(VP),每一份的编号叫做虚拟页号(VPN),例如假设虚拟页大小为4KB，一个虚拟内存大小为10KB，这个虚拟内存可以分成2个虚拟页(VP),虚拟页号(VPN)就是0,1
+
+页表是建立虚拟页号和物理页号映射关系的表结构，每个页表项(PTE)包括了有效位，物理页号，磁盘地址等信息。
+
+## 页面调度算法
+
+先进先出置换算法（FIFO
+
+最近最久未使用的置换算法（LRU）
+
+时钟页面置换算法
+
+**该算法的思路是，把所有的页面都保存在⼀个类似钟面的「环形链表」中，⼀个表针指向最老的页面。**
 
 ## 用户态与内核态之间切换
 
@@ -21,7 +43,7 @@
 
 操作系统将线程分为了内核态和用户态，当用户线程调用了系统调用的时候，需要将线程从用户态切换到内核态。
 
-无论是操作系统内核程序还是用户程序在运行的时候都需要申请内存来保存运行状态，调用方法信息、程序代码、数据等信息。
+**无论是操作系统内核程序还是用户程序在运行的时候都需要申请内存来保存运行状态，调用方法信息、程序代码、数据等信息。**
 
 **操作系统将内存分为内核空间和用户空间。**
 
